--- a/web/catraca/css/estilo.css
+++ b/web/catraca/css/estilo.css
@@ -3,25 +3,192 @@
 	padding: 0;
 }
 
-body{
-	
-	background-image: url();
-	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%, #3fa2db)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(0deg,  #020031 -5%,#3fa2db 100%); /* Chrome10+,Safari5.1+ */
-	
-}
-
-.fundo {	
-	
-	height: auto;
-	width: 90%;
-	opacity: 0.3;
-	position: absolute;	
-	float: relative;
+hr{
+	margin-right: 5px;
 }
 
 input{
 	color: #000;
+}
+
+.f8{
+	font-size: 8px;
+}
+
+.f12{
+	font-size: 12px;
+}
+
+.f14{
+	font-size: 14px;
+}
+
+.f16{
+	font-size: 16px;
+}
+
+.relatorio hr{
+	padding: 0;
+}
+
+.relatorio span{
+	display: block;
+}
+
+.relatorio div span{
+	float: 
+}
+
+.fundo {	
+	opacity: 0.3;
+	position: center;	
+	float: relative;
+}
+
+.fill-verde{
+    fill:#01934A !important;
+}
+
+.fill-vermelho{
+    fill:#FF2E33 !important;
+}
+
+.fill-amarelo{
+    fill:#FFCD0E !important;
+}
+
+.fill-cinza{
+    fill:#C3C3C3 !important;
+}
+
+.direita span{
+	display: block;
+		
+}
+
+.direita{
+	float:right;
+}
+
+.esquerda{
+	float:left;
+	
+}
+
+.esquerda span{
+	font-weight: bold;
+	display: block;
+	padding: 5px;
+}
+
+.config{	
+	margin-top: 0 auto;
+	margin: 0 auto;
+	max-width: 1200px;		
+}
+
+.config h1{
+	color: #000;
+}
+
+.banner{
+    background-color: #3fa2db;
+    border-bottom: 2px solid #359dd6;
+}
+
+.gradiente{	
+	color: #fff;	
+	text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
+	background: #020031; /* Old browsers */
+	background: -moz-linear-gradient(45deg,  #020031 0%, #3fa2db 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%, #3fa2db)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* IE10+ */
+	background: linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#3fa2db',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+	-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+	     box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+}
+
+.com-bordas{
+	margin-right: 10px;
+}
+
+.borda {
+	border: 1px solid #CCC;	
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	border-radius: 10px;
+	margin-top: 10px;
+	margin-right: 10px;
+	position: relative;
+	box-shadow: 0 1px 3px #000;
+	background-color: #fff;
+}
+
+.a-direita{
+	margin-right: 10px;
+}
+
+.padding {
+	padding-top: 20px;
+}
+
+.catraca-pequeno{	
+	width: 210px;
+    height: 130px;
+}
+
+.catraca-pequeno:hover{
+	box-shadow: 0 1px 5px #000;
+}
+
+.catraca-medio{
+	width: 230px;
+    height: 160px;
+}
+
+.catraca-medio:hover{
+	box-shadow: 0 1px 5px #000;
+}
+
+.catraca-icone{	
+	padding: 4px;
+	float: left;
+}
+
+.catraca-info span{	
+	float: right;
+}
+
+.catraca{
+	top:170px;
+	padding-right: 10px;
+	padding-left: 10px;	
+}
+
+.catraca a{
+	color: #000;
+}
+
+.catraca ul li a:hover{	
+	box-shadow: 0 2px 8px #000; 
+}
+
+.catraca ul li{
+	list-style: none;
+}
+
+.catraca span{
+	font-weight: bold;
+	color: #ccc;
+}
+
+#formcatraca{
+	top:70px;
 }
 
 #slide { 
@@ -74,8 +241,7 @@ color: #fff;
 }
 
 #barra{
-	height: 30px;
-	
+	height: 30px;	
 }
 
 #barra a{
@@ -83,90 +249,19 @@ color: #fff;
 	text-decoration: none;
 }
 
-
-
 #barra a:hover{
 	color: #fff;
 	text-decoration: none;
+}
 
+#titulo{
+	margin-top: 20px;
+	margin-left: 10px;
 }
 
 section#navegacao{
 	padding-left: 30px;
 	padding-top: 20px;
-}
-
-section#navegacao form{
-	
-	
-}
-
-.topomenu{
-	border-bottom: 2px solid #359dd6;
-	padding-top: 40px;
-	line-height: 50px;
-
-}
-
-.padding {
-	padding-top: 20px;
-}
-
-.topomenu h3{
-	background-color: #4682B4;
-	text-shadow: 0 2px 4px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);	
-}
-
-#menu {
-	width: 30%;
-	margin: 0; 
-	padding: 0;
-	float: left;
-}
-
-#menu ul li {
-		margin: 0; 
-		padding: 0px;
-		border-bottom: 1px solid #CCC;
-		text-align: left;
-		list-style-type: none;
-		width: 290px;
-		text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-}
-
-#menu a:link {
-		background: #F5F5F5;
-		color: #666;
-		font-weight: bold;
-		text-decoration: none;
-		padding: 8px;
-		display: block;
-}
-
-#menu a:hover {
-		background: #E5F0FF;
-		color: #039;
-}
-
-td#id{
-	width: 50px;
-}
-
-td#um{
-	width: 400px;	
-}
-
-td#nome{
-	width: 200px;
-}
-
-td#padrao1{
-	width: 120px;
-}
-
-td#padrao2{
-	width: 110px;
 }
 
 div#topo{
@@ -177,87 +272,6 @@ div#topo h1{
 	color: #fff;
 }
 
-div#login{
-	margin-right: 10px;
-	
-}
-
-div#alerta{
-	padding-top: 20px;
-}
-
-.menu {
-
-}
-
-.config{	
-	margin-top: 0 auto;
-	margin: 0 auto;
-	max-width: 1200px;
-		
-}
-
-.config input{
-	
-}
-
-.config label{
-	
-}
-
-.config h1{
-	color: #000;
-}
-
-
-.banner{
-    background-color: #3fa2db;
-    border-bottom: 2px solid #359dd6;
-}
-
-.gradiente{
-	
-	color: #fff;	
-	text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-	background: #020031; /* Old browsers */
-	background: -moz-linear-gradient(45deg,  #020031 0%, #3fa2db 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%, #3fa2db)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* IE10+ */
-	background: linear-gradient(45deg,  #020031 0%,#3fa2db 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#3fa2db',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-	-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-	     box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-}
-
-.com-bordas{
-	margin-right: 10px;
-}
-
-.borda {
-	border: 1px solid #CCC;	
-	padding-top: 10px;
-	padding-left: 10px;	
-	padding-bottom: 10px;
-	border-radius: 10px;
-	margin-top: 10px;
-}
-
-div#nome input{
-	width: 500px;
-}
-
-.borda tbody td{
-	font-size: 14px;
-	padding: 3px 6px;	
-}
-
-.preto form{
-	color:#000000;
-}
-
 table#turno{
 	position: relative;
 }
@@ -266,10 +280,114 @@ div#corpo{
 	height: 500px;	
 }
 
-@media screen and (width: 480){
-	
-	body{
+/*Abas*/
 
-	}
-	
+a:focus {	
+  outline: none;
+}
+
+div ul li a:hover{	
+	background-color: #DCDCDC;	
+}
+
+.conteiner {
+  margin: 20px;
+  overflow: auto;
+}
+
+.limpar:after {
+  content: '.';
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+ 
+/* Abas */
+.tabs-conteiner {
+  background: transparent;  
+  font-size: 14px;
+
+}
+ 
+/* Menu das abas */
+.tabs-abas {
+	border-bottom: 1px solid #ccc; 
+	float: none;
+	background: transparent;
+	opacity: 3;
+}
+
+.tabs-abas ul {
+   list-style: none;
+
+}
+.tabs-abas ul li {
+  float: left;  
+  padding-right: 3px;
+
+}
+.tabs-abas ul li a {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-weight: 700;  
+  letter-spacing: 0.08em;
+  color: #000;   
+  border-bottom: none;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.tabs-abas ul li a.activo-tab-abas{
+  background-color: #fff;  
+  border: 1px solid #ddd;
+  border-top-color: rgb(221, 221, 221);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-bottom: transparent;  
+  cursor: default;
+  text-decoration: none;
+}
+ 
+/* Conteúdo das abas */
+.tabs {
+  display: none;
+  padding: 30px;  
+  border-bottom-color: #666;
+  background: #fff;  
+}
+
+.first-tab {
+  display: block;
+}
+
+
+/*paginação*/
+.paginacao ul {
+	list-style: none;	
+}
+
+.paginacao ul li{
+	float: left;
+}
+
+.paginacao ul li a{
+	background: #fff;
+	padding: 5px 10px;	
+	text-decoration: none;
+	font-size: 14px;
+	border: 1px solid #000;
+	border-radius: 20px;
+	color: #1E90FF;
+	margin-right: 10px;
+	border-color: #ccc;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.paginacao ul li a:hover{
+	background: #DCDCDC;
 }
