--- a/web/gerador/css/estilo.css
+++ b/web/gerador/css/estilo.css
@@ -138,7 +138,7 @@ th{
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-bottom: 10px;
-	border-radius: 10px;
+	border-radius: 3px;
 	margin-top: 10px;
 	position: relative;
 	box-shadow: 0 1px 3px #000;
@@ -300,6 +300,10 @@ hr.dois{
 	margin-bottom: 3px;
 	padding: 0;
 	border: 2px solid #CCC;
+}
+
+#menu2{
+	display: none;
 }
 
 #formcatraca{
