--- a/web/identificador/css/estilo_responsivo.css
+++ b/web/identificador/css/estilo_responsivo.css
@@ -7,7 +7,7 @@
 	div#topo{
 		padding-top: 0px !important;
 		height: 90px;
-	}
+	}	
 	
 	img{
 		position: absolute;		
@@ -27,6 +27,18 @@
 	#barra{
 		padding-top: 0;
 		
-	}	
+	}
+	
+	.tabela-relatorio{
+		 transform: rotate(-90deg);
+		 -webkit-transform: rotate(-90deg); /* Safari/Chrome */
+		 -moz-transform: rotate(-90deg); /* Firefox */
+		 -o-transform: rotate(-90deg); /* Opera */
+		 -ms-transform: rotate(-90deg); /* IE 9 */
+	}
     
+}
+
+@media screen and (max-width: 481px){
+	
 }
