--- a/web/identificador/css/estilo.css
+++ b/web/identificador/css/estilo.css
@@ -391,7 +391,7 @@ color: #fff;
 }
 
 #caixa {
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 #caixa table {
@@ -429,6 +429,15 @@ color: #fff;
 #infovenda{
 	margin-right: 20px;
 	height: 320px;
+	overflow: scroll;
+}
+
+#infovenda table{
+	overflow: scroll;
+}
+
+#infovenda h3{
+	
 }
 
 #infovenda td{
@@ -436,7 +445,7 @@ color: #fff;
 }
 
 div#topo{
-	padding-top: 10px;
+	padding-top: 20px;
 }
 
 div#topo h1{
@@ -597,3 +606,32 @@ a:focus {
 .paginacao ul li a:hover{
 	background: #DCDCDC;
 }
+
+.informacao{
+	background: #ccc;
+	box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+}
+
+.informacao p{
+	text-align: justify;
+	font-size: 20px;
+}
+
+.informacao li{
+	font-size: 20px;
+	list-style: disc;
+}
+
+
+
+.login{
+	
+	padding-left: 10px;
+}
+
+.acessibilidade{
+	padding-top: 0;
+	margin-top: 8px;
+	margin-bottom: 8px;
+}
+
