--- a/web/guiche/css_spa/spa.css
+++ b/web/guiche/css_spa/spa.css
@@ -11,7 +11,7 @@
 /* 
     Importação da fonte padrão do framework (Open Sans)
 */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
+@import url(fonte_padrao.css);
 /*
     Importação dos módulos
 */
