--- a/web/guiche/css/estilo3.css
+++ b/web/guiche/css/estilo3.css
@@ -460,8 +460,7 @@ span#aproxime{
 .imagem-fundo{	
 	width: 350px;
 	height: 308px;
-	opacity: 0.1;
-	padding-left: 70%;	
+	opacity: 0.1;	
 }
 
 .fundo-cliente{
@@ -471,7 +470,6 @@ span#aproxime{
 	top: 30%;
 }
 
-.imagem-fundo-cliente{
 	width: 600px;
 	height: 528px;
 	opacity: 0.1;
@@ -485,13 +483,12 @@ span#aproxime{
 	height:343px;
     overflow: hidden;
     margin-left: 6px;
-    border:solid 1px #ccc;
 }
 
 .zoom img {
    	width: 100%; 
 	border-radius: 2px;
-	
+	border:solid 1px #000;
 }
 
 .zoom img {
@@ -575,55 +572,3 @@ span#aproxime{
     padding-left: 73px;
     transform: scale(1.3);
 }
-
-/*
-    Títulos
-*/
-.titulo,.titulo-com-borda {
-    color:#2E496B !important;
-    font-weight:bold !important;
-    font-size:1em !important;
-    line-height: 1.8em !important;
-    margin:0px !important;
-    page-break-before: always !important;
-    margin-bottom: 10px !important;
-    border-bottom: 1px solid #E5E5E5 !important;
-    display: block !important;
-}
-.titulo {
-    font-size:1.125em !important;
-    border: none !important;
-    padding: 0 !important;
-    margin: 0 !important; 
-}
-.titulo:before,.titulo:after{
-    content:"";
-    display:block;
-    clear:both;
-}
-
-/*Janela Modal*/
-
-.window{
-    display:none;
-    position:absolute;
-    left:0;
-    top:0;
-    background:#FFF;
-    z-index:9900;
-    padding:10px;
-    border-radius:10px;
-}
- 
-#mascara{
-	padding-top: 20px;
-	padding-left:20px;
-    display:none;
-    position:absolute;
-    left:0;
-    top:0;
-    z-index:9000;
-    background-color:#000;
-}
- 
-.fechar{display:block; text-align:right;}
