--- a/web/docs/source/classes/view/CatracaVirtualView.php.html
+++ b/web/docs/source/classes/view/CatracaVirtualView.php.html
@@ -36,107 +36,104 @@
     <body>
         <pre class="brush: php">&lt;?php
 /**
+ * Nesta Classe est&atilde;o contidos os C&oacute;digos HTML, respons&aacute;veis pela gera&ccedil;&atilde;o das Telas.
  * @author Jefferson Uchoa Ponte
  * @version 1.0
  * @copyright UNILAB - Universidade da Integracao Internacional da Lusofonia Afro-Brasileira.
  * @package View
  */
-
-class CatracaVirtualView{
+/**
+ * Nesta Classe est&atilde;o contidos os C&oacute;digos HTML
+ * respons&aacute;veis por gerar os elementos e as telas da p&aacute;gina Catraca Virtual.
+ */
+class CatracaVirtualView {
 	
-	
-	public function formBuscaCartao(){
-		echo '
-				&lt;script&gt;
-						  $(document).bind(\'autofocus_ready\', function() {
-						    if (!(&quot;autofocus&quot; in document.createElement(&quot;input&quot;))) {
-						      $(&quot;#numero_cartao&quot;).focus();
-						    }
-						  });
-						&lt;/script&gt;
-	
-
-						&lt;form method=&quot;get&quot; action=&quot;&quot; class=&quot;formulario em-linha&quot; &gt;
-							&lt;input type=&quot;hidden&quot; name=&quot;pagina&quot; value=&quot;gerador&quot; /&gt;
-							&lt;label for=&quot;numero_cartao&quot;&gt;
-								&lt;object class=&quot;rotulo texto-preto&quot;&gt;Buscar por N&uacute;mero: &lt;/object&gt;&lt;br&gt;&lt;br&gt;
-			
-								&lt;input class=&quot;texto-preto&quot; type=&quot;number&quot; name=&quot;numero_cartao&quot; id=&quot;numero_cartao&quot; autofocus /&gt;&lt;br&gt;
-								 &lt;script&gt;$(document).trigger(\'autofocus_ready\');&lt;/script&gt;
-								&lt;input type=&quot;submit&quot; /&gt;
-							&lt;/label&gt;
-
-						&lt;/form&gt;';
+	/**
+	 * Gera um formul&aacute;rio para buscar pelo Usuario atrav&eacute;s do seu cart&atilde;o.
+	 */
+	public function formBuscaCartao() {
+		echo '	&lt;script&gt;
+					$(document).bind(\'autofocus_ready\', function() {
+				    	if (!(&quot;autofocus&quot; in document.createElement(&quot;input&quot;))) {
+				      		$(&quot;#numero_cartao&quot;).focus();
+				    	}
+				  	});
+				&lt;/script&gt;
+					&lt;form method=&quot;get&quot; action=&quot;&quot; class=&quot;formulario em-linha&quot; &gt;
+						&lt;input type=&quot;hidden&quot; name=&quot;pagina&quot; value=&quot;gerador&quot; /&gt;
+						&lt;label for=&quot;numero_cartao&quot;&gt;
+							&lt;object class=&quot;rotulo texto-preto&quot;&gt;Buscar por N&uacute;mero: &lt;/object&gt;&lt;br&gt;&lt;br&gt;		
+							&lt;input class=&quot;texto-preto&quot; type=&quot;number&quot; name=&quot;numero_cartao&quot; id=&quot;numero_cartao&quot; autofocus /&gt;&lt;br&gt;
+							 &lt;script&gt;$(document).trigger(\'autofocus_ready\');&lt;/script&gt;
+							&lt;input type=&quot;submit&quot; /&gt;
+						&lt;/label&gt;
+					&lt;/form&gt;';
 	}
 	
-	public function formSelecionarRu($listaDeCatracas){
+	/**
+	 * Gera o formul&aacute;rio paara a sele&ccedil;&atilde;o do RU a ser utilizado.
+	 * 
+	 * @param array $listaDeCatracas        	
+	 */
+	public function formSelecionarRu($listaDeCatracas) {
+		echo '	&lt;div class=&quot;navegacao&quot;&gt;
+					&lt;div class = &quot;simpleTabs&quot;&gt;
+				        &lt;ul class = &quot;simpleTabsNavigation&quot;&gt;
+							&lt;li&gt;&lt;a href=&quot;#&quot;&gt;Cadastro&lt;/a&gt;&lt;/li&gt;
+				        &lt;/ul&gt;
+			        	&lt;div class = &quot;simpleTabsContent&quot;&gt;
+							&lt;div class=&quot;doze colunas borda&quot;&gt;		
+								&lt;form action=&quot;&quot; method=&quot;post&quot;&gt;
+									&lt;label for=&quot;catraca_id&quot;&gt;Selecione o Restaurante:&lt;/label&gt;&lt;br&gt;
+				       				&lt;select name=&quot;catraca_id&quot; id=&quot;catraca_id&quot;&gt;';
 		
-
-
-		echo '&lt;div class=&quot;navegacao&quot;&gt;
-				&lt;div class = &quot;simpleTabs&quot;&gt;
-			        &lt;ul class = &quot;simpleTabsNavigation&quot;&gt;
-						&lt;li&gt;&lt;a href=&quot;#&quot;&gt;Cadastro&lt;/a&gt;&lt;/li&gt;
-			        &lt;/ul&gt;
-			        &lt;div class = &quot;simpleTabsContent&quot;&gt;
-						&lt;div class=&quot;doze colunas borda&quot;&gt;';
-		
-		echo '&lt;form action=&quot;&quot; method=&quot;post&quot;&gt;
-				&lt;label for=&quot;catraca_id&quot;&gt;Selecione o Restaurante:&lt;/label&gt;&lt;br&gt;
-			        &lt;select name=&quot;catraca_id&quot; id=&quot;catraca_id&quot;&gt;';
-		
-		foreach ($listaDeCatracas as $catraca){
-				
-			echo '&lt;option value=&quot;'.$catraca-&gt;getId().'&quot;&gt;'.$catraca-&gt;getNome().'&lt;/option&gt;';
-		
+		foreach ( $listaDeCatracas as $catraca ) {
+			echo '&lt;option value=&quot;' . $catraca-&gt;getId () . '&quot;&gt;' . $catraca-&gt;getNome () . '&lt;/option&gt;';
 		}
-		
-		
-		 
-		echo '       &lt;/select&gt;&lt;br&gt;
-					&lt;input name=&quot;catraca_virtual&quot; type=&quot;submit&quot; class=&quot;botao&quot; VALUE=&quot;Selecionar&quot; /&gt;
-				&lt;/form&gt;	';
-		
-		
-		echo '&lt;/div&gt;
-				&lt;/div&gt;
-				&lt;/div&gt;
+		echo ' 		      			&lt;/select&gt;&lt;br&gt;
+									&lt;input name=&quot;catraca_virtual&quot; type=&quot;submit&quot; class=&quot;botao&quot; VALUE=&quot;Selecionar&quot; /&gt;
+								&lt;/form&gt;			
+							&lt;/div&gt;
+						&lt;/div&gt;
+					&lt;/div&gt;
 				&lt;/div&gt;';
-		
 	}
 	
-	public function exibirQuantidadesDeCadaTipo($listaDeTipos, $quantidades, Catraca $catraca){
-		echo '
-				
-							&lt;table class=&quot;tabela borda-vertical zebrada no-centro centralizado&quot;&gt;
-							    &lt;thead&gt;
-							        &lt;tr&gt;
-												&lt;th&gt;Unidade&lt;/th&gt;';
-		foreach($listaDeTipos as $tipo){
-			echo '&lt;th&gt;'.$tipo-&gt;getNome().'&lt;/th&gt;';
+	/**
+	 * Gera uma tabela contendo as informa&ccedil;&otilde;es referentes ao RU anteriomente selecionado.
+	 * A tabela distingue tipos e quantidades de refei&ccedil;&otilde;es do RU.
+	 * 
+	 * @param array $listaDeTipos        	
+	 * @param array $quantidades        	
+	 * @param Catraca $catraca        	
+	 */
+	public function exibirQuantidadesDeCadaTipo($listaDeTipos, $quantidades, Catraca $catraca) {
+		echo '	&lt;table class=&quot;tabela borda-vertical zebrada no-centro centralizado&quot;&gt;
+					&lt;thead&gt;
+						&lt;tr&gt;
+							&lt;th&gt;Unidade&lt;/th&gt;';
 		
-		
+		foreach ( $listaDeTipos as $tipo ) {
+			echo '			&lt;th&gt;' . $tipo-&gt;getNome () . '&lt;/th&gt;';
 		}
-		echo '&lt;th&gt;Total&lt;/th&gt;&lt;/tr&gt;&lt;/thead&gt;&lt;tbody&gt;';
-		echo '					        &lt;tr&gt;
-				&lt;th&gt;'.$catraca-&gt;getNome().'&lt;/th&gt;';
+		
+		echo '				&lt;th&gt;Total&lt;/th&gt;
+						&lt;/tr&gt;
+					&lt;/thead&gt;
+					&lt;tbody&gt;
+						&lt;tr&gt;
+							&lt;th&gt;' . $catraca-&gt;getNome () . '&lt;/th&gt;';
 		$somatorio = 0;
-		foreach ($quantidades as $quantidade){
+		foreach ( $quantidades as $quantidade ) {
 			$somatorio += $quantidade;
-			echo '&lt;td&gt;'.$quantidade.'&lt;/td&gt;';
-				
+			echo '			&lt;td&gt;' . $quantidade . '&lt;/td&gt;';
 		}
-		echo '&lt;td&gt;'.$somatorio.'&lt;/td&gt;';
-		
-		echo '&lt;/tr&gt;';
-		echo '&lt;/tbody&gt;&lt;/table&gt;';
-
-		
-		
+		echo '				&lt;td&gt;' . $somatorio . '&lt;/td&gt;		
+						&lt;/tr&gt;';
+		echo '		&lt;/tbody&gt;
+				&lt;/table&gt;';
 	}
-	
 }
-
 
 ?&gt;</pre>
         <script type="text/javascript">
