--- a/web/docs/source/classes/view/UsuarioView.php.html
+++ b/web/docs/source/classes/view/UsuarioView.php.html
@@ -36,20 +36,39 @@
     <body>
         <pre class="brush: php">&lt;?php
 /**
+ * Nesta Classe est&atilde;o contidos os C&oacute;digos HTML, respons&aacute;veis pela gera&ccedil;&atilde;o das Telas.
  * @author Jefferson Uchoa Ponte
  * @version 1.0
  * @copyright UNILAB - Universidade da Integracao Internacional da Lusofonia Afro-Brasileira.
  * @package View
  */
+/**
+ * 
+ * Nesta Classe est&atilde;o contidos os C&oacute;digos HTML
+ * respons&aacute;veis por gerar os elementos e as telas da p&aacute;gina de Usu&aacute;rio.
+ *
+ */
 class UsuarioView {
+	
+	/**
+	 * Nesta Fun&ccedil;&atilde;o gera a tela de login do usu&aacute;rio,
+	 * recebe como parametros:
+	 * 
+	 * $erro : caso o Usu&aacute;rio digite seus dados errados;
+	 * 
+	 * $msg_erro : Com a mensagem com informa&ccedil;&otilde;es de erro para o Usu&aacute;rio
+	 * 
+	 * @param boolean $erro 
+	 * @param string $msg_erro        	
+	 */
 	public function mostraFormularioLogin($erro = false, $msg_erro = &quot;&quot;) {
 		echo '&lt;div class=&quot;fundo-cinza1&quot;&gt;
-     &lt;div class=&quot;duas colunas no-meio&quot;&gt;
-            &lt;div class=&quot;no-centro&quot;&gt;
-                &lt;h1&gt;Catraca&lt;/h1&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;linha fundo-branco com-bordas&quot;&gt;
-                &lt;div class=&quot;conteudo&quot;&gt;';
+			     &lt;div class=&quot;duas colunas no-meio&quot;&gt;
+			            &lt;div class=&quot;no-centro&quot;&gt;
+			                &lt;h1&gt;Catraca&lt;/h1&gt;
+			            &lt;/div&gt;
+			            &lt;div class=&quot;linha fundo-branco com-bordas&quot;&gt;
+			                &lt;div class=&quot;conteudo&quot;&gt;';
 		
 		if ($erro)
 			echo '     
@@ -59,27 +78,24 @@ class UsuarioView {
                        &lt;div class=&quot;subtitulo-alerta&quot;&gt;Favor verificar novamente.&lt;/div&gt;
                     &lt;/div&gt;';
 		
-		echo '&lt;form method=&quot;post&quot; action=&quot;&quot; class=&quot;formulario-organizado&quot;&gt;
+		echo '		&lt;form method=&quot;post&quot; action=&quot;&quot; class=&quot;formulario-organizado&quot;&gt;
 
-                       &lt;label for=&quot;idTextLogin&quot;&gt;
-                           Login
-                           &lt;input type=&quot;text&quot; name=&quot;login&quot; id=&quot;idTextLogin&quot; class=&quot;doze&quot; placeholder=&quot;Digite seu Usu&aacute;rio&quot;/&gt;
-                        &lt;/label&gt;
-                        &lt;label for=&quot;idTextSenha&quot;&gt;
-                            Senha
-                            &lt;input type=&quot;password&quot; name=&quot;senha&quot; id=&quot;idTextSenha&quot; class=&quot;doze&quot; placeholder=&quot;Digite sua Senha&quot; /&gt;
-                        &lt;/label&gt;
-                       &lt;button type=&quot;submit&quot; name=&quot;formlogin&quot; class=&quot;botao b-primario doze&quot;&gt;&lt;span class=&quot;icone-redo2&quot;&gt;&lt;/span&gt; Entrar &lt;/button&gt;                
-                    &lt;/form&gt;
-                    &lt;a href=&quot;http://sigadmin.unilab.edu.br/admin/public/recuperar_login.jsf&quot; class=&quot;medio centralizado doze colunas&quot;&gt;N&atilde;o consegue acessar o sistema?&lt;/a&gt;                 
-                &lt;/div&gt;
-            &lt;/div&gt;
+		                       &lt;label for=&quot;idTextLogin&quot;&gt;
+		                           Login
+		                           &lt;input type=&quot;text&quot; name=&quot;login&quot; id=&quot;idTextLogin&quot; class=&quot;doze&quot; placeholder=&quot;Digite seu Usu&aacute;rio&quot;/&gt;
+		                        &lt;/label&gt;
+		                        &lt;label for=&quot;idTextSenha&quot;&gt;
+		                            Senha
+		                            &lt;input type=&quot;password&quot; name=&quot;senha&quot; id=&quot;idTextSenha&quot; class=&quot;doze&quot; placeholder=&quot;Digite sua Senha&quot; /&gt;
+		                        &lt;/label&gt;
+		                       &lt;button type=&quot;submit&quot; name=&quot;formlogin&quot; class=&quot;botao b-primario doze&quot;&gt;&lt;span class=&quot;icone-redo2&quot;&gt;&lt;/span&gt; Entrar &lt;/button&gt;                
+		                    &lt;/form&gt;
+		                    &lt;a href=&quot;http://sigadmin.unilab.edu.br/admin/public/recuperar_login.jsf&quot; class=&quot;medio centralizado doze colunas&quot;&gt;N&atilde;o consegue acessar o sistema?&lt;/a&gt;                 
+		                &lt;/div&gt;
+		            &lt;/div&gt;
             
-     &lt;/div&gt;
-&lt;/div&gt;';
-	}
-	public function formularioGerarAdministrador($erro = false, $msg_erro = &quot;&quot;) {
-		
+				     &lt;/div&gt;
+				&lt;/div&gt;';
 	}
 }</pre>
         <script type="text/javascript">
